deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
        - name: model-service
          image: ghcr.io/remla2025-team10/model-service:v0.0.5
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: model-volume
              mountPath: /model-service/models
      volumes:
        - name: model-volume
          hostPath:
            path: ./
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: model-service-serv
spec:
  selector:
    app: model-service
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
        - name: app
          image: ghcr.io/remla2025-team10/app-service:v0.5.2
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        number: 8080
